@@ -75,8 +75,7 @@ public class MineCraftConstants {
 	public static enum BLOCK_TYPE {
 		NORMAL,
 		TORCH,
-		DECORATION_SMALL,
-		DECORATION_FULL,
+		DECORATION_CROSS,
 		CROPS,
 		LADDER,
 		FLOOR,
@@ -210,7 +209,7 @@ public class MineCraftConstants {
 		BLOCK.TORCH, BLOCK.REDSTONE_TORCH_ON, BLOCK.REDSTONE_TORCH_OFF,
 		BLOCK.RED_ROSE, BLOCK.YELLOW_FLOWER,
 		BLOCK.BROWN_MUSHROOM, BLOCK.RED_MUSHROOM,
-		BLOCK.LEVER, BLOCK.SAPLING
+		BLOCK.LEVER, BLOCK.SAPLING, BLOCK.SUGARCANE
 	};
 	
 	// HIGHLIGHT_ORES defines the kinds of blocks that we'll highlight.
@@ -320,14 +319,12 @@ public class MineCraftConstants {
 		BLOCK_TYPE_MAP.put((byte)BLOCK.REDSTONE_TORCH_OFF.id, BLOCK_TYPE.TORCH);
 		
 		// Small decoration blocks
-		BLOCK_TYPE_MAP.put((byte)BLOCK.RED_MUSHROOM.id, BLOCK_TYPE.DECORATION_SMALL);
-		BLOCK_TYPE_MAP.put((byte)BLOCK.BROWN_MUSHROOM.id, BLOCK_TYPE.DECORATION_SMALL);
-		BLOCK_TYPE_MAP.put((byte)BLOCK.RED_ROSE.id, BLOCK_TYPE.DECORATION_SMALL);
-		BLOCK_TYPE_MAP.put((byte)BLOCK.YELLOW_FLOWER.id, BLOCK_TYPE.DECORATION_SMALL);
-		BLOCK_TYPE_MAP.put((byte)BLOCK.SAPLING.id, BLOCK_TYPE.DECORATION_SMALL);
-		
-		// "Full" decoration blocks
-		BLOCK_TYPE_MAP.put((byte)BLOCK.SUGARCANE.id, BLOCK_TYPE.DECORATION_FULL);
+		BLOCK_TYPE_MAP.put((byte)BLOCK.RED_MUSHROOM.id, BLOCK_TYPE.DECORATION_CROSS);
+		BLOCK_TYPE_MAP.put((byte)BLOCK.BROWN_MUSHROOM.id, BLOCK_TYPE.DECORATION_CROSS);
+		BLOCK_TYPE_MAP.put((byte)BLOCK.RED_ROSE.id, BLOCK_TYPE.DECORATION_CROSS);
+		BLOCK_TYPE_MAP.put((byte)BLOCK.YELLOW_FLOWER.id, BLOCK_TYPE.DECORATION_CROSS);
+		BLOCK_TYPE_MAP.put((byte)BLOCK.SAPLING.id, BLOCK_TYPE.DECORATION_CROSS);
+		BLOCK_TYPE_MAP.put((byte)BLOCK.SUGARCANE.id, BLOCK_TYPE.DECORATION_CROSS);
 		
 		// Crops
 		BLOCK_TYPE_MAP.put((byte)BLOCK.CROPS.id, BLOCK_TYPE.CROPS);
